tests/semantic/rel_stratification2/rel_stratification2.dl
.decl Input(n:number)
Input(11).
Input(12).
Input(x - 2) :- Trace(x,x).

.decl RelevantNumber(n:number)
RelevantNumber(n) :- Input(n), Input(n+1).

.decl Trace(a:number, b:number)
.output Trace()
Trace(a, b) :- RelevantNumber(a), RelevantNumber(b), !Input(a+b).